# quanttrade-platform

./: .gitignore  Makefile  README.md  alembic.ini  claude_test.txt  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 652e22543f17_data_quality_event.py  a254e7c6ba7c_candle_backfill_checkpoint.py  e01343649d57_baseline_schema.py  e1fdbf4f07ed_backtest_run_registry_append_only_and_.py
application/: __init__.py
application/backtest/: __init__.py  loop.py  metrics.py
docs/: ARCHITECTURE.md  DATABASE.md  TASKS.md
docs/adr/: ADR-000-mid-frequency-scope-not-hft.md  ADR-001-primary-language-python.md  ADR-002-primary-database-postgres-timescaledb.md  ADR-003-message-bus-asyncio-to-nats.md  ADR-004-orm-sqlalchemy-core-no-domain-orm.md  README.md
domain/: __init__.py  candle.py  dataset_version.py  fee_schedule.py  fill.py  fill_simulation.py  instrument.py  money.py  order.py  position.py
domain/ports/: __init__.py  clock.py  dataset_version_repository.py  event_bus.py  market_data.py  venue.py
domain/strategy/: __init__.py  registry.py  strategy.py
infrastructure/: __init__.py  clock.py
infrastructure/backtest/: __init__.py  dataset_version_repository.py  historical_feed.py  market_data_view.py  run_registry.py
infrastructure/db/: __init__.py
infrastructure/db/tables/: __init__.py  _common.py  _metadata.py  audit.py  backfill.py  backtest.py  data_quality.py  execution.py  market_data.py  risk.py  (+3 more)
infrastructure/indicators/: __init__.py
infrastructure/jobs/: __init__.py  gap_detection.py  ohlcv_backfill_job.py  parquet_archival_job.py  reference_data_importer.py  universe_snapshot_job.py
infrastructure/observability/: __init__.py  app.py  correlation.py  logging.py  metrics.py
infrastructure/secrets/: __init__.py  client.py  env.py  vault.py
infrastructure/validation/: __init__.py  candle_validation.py
infrastructure/venues/: __init__.py
scripts/: check_adr_not_deleted.py  check_no_env_secrets.py  check_no_float.py  check_no_wall_clock_in_strategy.py  init_db.sh
tests/: test_adr_files.py  test_check_adr_not_deleted.py  test_check_no_env_secrets.py  test_check_no_float.py  test_check_no_wall_clock_in_strategy.py  test_smoke.py
tests/domain/: test_candle.py  test_dataset_version.py  test_fee_schedule.py  test_fill.py  test_fill_simulation.py  test_instrument.py  test_money.py  test_order.py  test_ports.py  test_position.py  test_strategy.py
tests/infrastructure/: test_app.py  test_clock.py  test_correlation.py  test_db_migrations.py  test_db_tables.py  test_logging.py  test_metrics.py  test_secrets_client.py  test_secrets_env.py  test_secrets_vault.py
(+49 files in other folders)
